clusters/home-lab/cdk8s_definitions/dist/jackett/jackett.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett-15.0.19
    app.kubernetes.io/instance: jackett
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jackett
    app.kubernetes.io/version: 0.21.1033
    helm-revision: "1"
    helm.sh/chart: jackett-15.0.19
    release: jackett
    service.name: main
  name: jackett
  namespace: prod-media
spec:
  ports:
    - name: main
      port: 9117
      protocol: TCP
      targetPort: 9117
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: jackett
    app.kubernetes.io/name: jackett
    pod.name: main
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jackett-15.0.19
    app.kubernetes.io/instance: jackett
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jackett
    app.kubernetes.io/version: 0.21.1033
    helm-revision: "1"
    helm.sh/chart: jackett-15.0.19
    release: jackett
  name: jackett
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: jackett
      app.kubernetes.io/name: jackett
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        app: jackett-15.0.19
        app.kubernetes.io/instance: jackett
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: jackett
        app.kubernetes.io/version: 0.21.1033
        helm-revision: "1"
        helm.sh/chart: jackett-15.0.19
        pod.name: main
        release: jackett
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: S6_READ_ONLY_ROOT
              value: "1"
          image: tccr.io/truecharts/jackett:v0.20.2297
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /UI/Login
              port: 9117
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: jackett
          ports:
            - containerPort: 9117
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /UI/Login
              port: 9117
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 500Mi
            requests:
              cpu: 1000m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 9117
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /downloads
              name: torrentblackhole
              readOnly: false
              subPath: torrent-blackhole
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostNetwork: false
      hostPID: false
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
        - emptyDir:
            medium: Memory
          name: devshm
        - emptyDir: {}
          name: shared
        - emptyDir: {}
          name: tmp
        - name: torrentblackhole
          persistentVolumeClaim:
            claimName: media-downloads
        - emptyDir: {}
          name: varlogs
        - emptyDir:
            medium: Memory
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-basic-auth@kubernetescrd
  labels:
    app: jackett-15.0.19
    app.kubernetes.io/instance: jackett
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jackett
    app.kubernetes.io/version: 0.21.1033
    helm-revision: "1"
    helm.sh/chart: jackett-15.0.19
    release: jackett
  name: jackett
  namespace: prod-media
spec:
  rules:
    - host: jackett.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: jackett
                port:
                  number: 9117
            path: /
            pathType: Prefix
